--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap');
 
 * {
-  border: 1px solid red;
-  margin: 0;
+  /* border: 0.5px solid red; */
 }
 
 body {
   font-family: 'Plus Jakarta Sans', sans-serif;
   background-color: whitesmoke;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
   display: flex;
+  height: 100vh;
 }
 
 .imagePanel {
@@ -21,12 +24,12 @@ body {
 .formPanel {
   position: relative;
   width: 100vw;
-  margin: 100px 30px;
+  margin: 50px 0px 50px 0px;
 }
 
 .gambarnya {
   width: 500px;
-  height: 100vh;
+  height: 100%;
 }
 
 th {
@@ -50,17 +53,25 @@ table {
   font-size: 15px;
   font-weight: 800;
   border-radius: 8px;
-  margin: 30px 0;
+  margin: 30px;
+  border: 0;
+  box-shadow: 9px 2px 5px -6px rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow: 9px 2px 5px -6px rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 9px 2px 5px -6px rgba(0, 0, 0, 0.24);
 }
 
 .form-container {
-  /* position: absolute; */
   margin-top: 50px;
   background-color: white;
+  padding: 15px 30px;
+  box-shadow: -2px 22px 29px -26px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: -2px 22px 29px -26px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: -2px 22px 29px -26px rgba(0, 0, 0, 0.4);
 }
 
 .welcomeText {
   width: 70%;
+  padding-left: 30px;
 }
 
 input {
@@ -70,8 +81,12 @@ input {
 }
 
 input:focus {
-  border: 1px solid rgb(164, 164, 197);
+  border: 1px solid rgb(25, 226, 72);
   box-shadow: 9px 2px 5px -6px rgba(0, 0, 0, 0.24);
   -webkit-box-shadow: 9px 2px 5px -6px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 9px 2px 5px -6px rgba(0, 0, 0, 0.24);
+}
+
+.loginPage {
+  padding-left: 30px;
 }
