--- a/styles.css
+++ b/styles.css
@@ -75,16 +75,15 @@ table {
 }
 
 input {
-  border: 1px solid #e5e7eb;
+  border: 0.5px solid #e5e7eb;
   height: 25px;
   border-radius: 8px;
 }
 
 input:focus {
-  border: 1px solid rgb(25, 226, 72);
-  box-shadow: 9px 2px 5px -6px rgba(0, 0, 0, 0.24);
-  -webkit-box-shadow: 9px 2px 5px -6px rgba(0, 0, 0, 0.24);
-  -moz-box-shadow: 9px 2px 5px -6px rgba(0, 0, 0, 0.24);
+  outline: none !important;
+  border-color: rgb(36, 188, 222);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .loginPage {
