--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,9 @@ body {
 
 .imagePanel {
   position: relative;
+  width: 800px;
+  display: flex;
+  justify-content: center;
 }
 
 .formPanel {
@@ -26,9 +29,14 @@ body {
   width: 100vw;
   margin: 50px 0px 50px 0px;
 }
+img {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+}
 
 .gambarnya {
-  width: 500px;
+  width: 100%;
   height: 100%;
 }
 
@@ -38,7 +46,6 @@ th {
 
 a {
   text-decoration: none;
-  color: green;
 }
 
 table {
@@ -46,6 +53,7 @@ table {
 }
 
 .createButton {
+  /* position: absolute; */
   background-color: #596d48;
   color: white;
   width: 200px;
@@ -58,6 +66,10 @@ table {
   box-shadow: 9px 2px 5px -6px rgba(0, 0, 0, 0.24);
   -webkit-box-shadow: 9px 2px 5px -6px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 9px 2px 5px -6px rgba(0, 0, 0, 0.24);
+}
+
+.createButton:hover {
+  background-color: #545f4b;
 }
 
 .form-container {
@@ -80,6 +92,10 @@ input {
   border-radius: 8px;
 }
 
+input:active {
+  border-color: rgb(85, 191, 191);
+}
+
 input:focus {
   outline: none !important;
   border-color: rgb(36, 188, 222);
@@ -88,4 +104,25 @@ input:focus {
 
 .loginPage {
   padding-left: 30px;
+}
+
+.logoContainer {
+  display: flex;
+  position: absolute;
+  top: 20%;
+  width: 100%;
+  background-color: rgba(37, 37, 30, 0.51);
+  justify-content: center;
+}
+
+.logo {
+  width: 100px;
+  opacity: 100%;
+}
+
+#credit {
+  position: absolute;
+  bottom: 1px;
+  font-size: 0.9rem;
+  color: white;
 }
